<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_menu_preferences"
            android:title="@string/menu_preferences" />
        <item
            android:id="@+id/nav_account_configurations"
            android:icon="@drawable/ic_menu_account_configurations"
            android:title="@string/menu_account_configurations" />
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/menu_about" />
            </group>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>
</menu>
