<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.workingdummies.peteat.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_preferences"
        android:name="com.workingdummies.peteat.PreferencesFragment"
        android:label="@string/menu_preferences"
        tools:layout="@layout/fragment_preferences" />

    <fragment
        android:id="@+id/nav_account_configurations"
        android:name="com.workingdummies.peteat.AccountFragment"
        android:label="@string/menu_account_configurations"
        tools:layout="@layout/fragment_account" />
</navigation>