<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_padding_top"
    android:paddingBottom="@dimen/activity_padding_bottom"
    android:paddingStart="@dimen/activity_padding_start"
    android:paddingEnd="@dimen/activity_padding_end"
    tools:context=".ChangeEmailActivity"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:id="@+id/llForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:focusableInTouchMode="true"
        android:layout_centerVertical="true"
        android:layout_above="@id/button_accept">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_change_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_change_notification"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/text_view"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/item_margin_bottom"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_email"
                app:endIconMode="clear_text"
                app:boxBackgroundColor="@color/text_input"
                android:layout_marginBottom="@dimen/item_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_password"
                app:endIconMode="password_toggle"
                app:boxBackgroundColor="@color/text_input"
                android:layout_marginBottom="@dimen/item_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_repeat_password"
                app:endIconMode="password_toggle"
                app:boxBackgroundColor="@color/text_input"
                android:layout_marginBottom="45dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_repeat_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_new_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_new_data"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/text_view"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/item_margin_bottom"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_new_email"
                app:endIconMode="clear_text"
                app:boxBackgroundColor="@color/text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_new_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_accept"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_accept"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:letterSpacing="0"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>
</RelativeLayout>