<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_padding_top"
    android:paddingBottom="@dimen/activity_padding_bottom"
    android:paddingStart="@dimen/activity_padding_start"
    android:paddingEnd="@dimen/activity_padding_end"
    tools:context=".MainActivity"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:id="@+id/llForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:focusableInTouchMode="true"
        android:layout_centerVertical="true"
        android:layout_above="@id/button_accept">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_settings"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/ic_menu_preferences"
                android:backgroundTint="@color/icons"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/item_margin_bottom"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_notifications"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="55"
                    android:text="@string/text_view_notifications"
                    android:layout_gravity="center"
                    android:textSize="16sp"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_notifications"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="45"
                    android:checked="false"
                    android:textSize="16sp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_messages"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="45"
                    android:text="@string/text_view_messages"
                    android:layout_gravity="center"
                    android:textSize="16sp">
                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_messages"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="55"
                    android:layout_gravity="center"
                    app:boxBackgroundColor="#D9E7EC">
                    <AutoCompleteTextView
                        android:id="@+id/filled_exposed_dropdown"
                        android:hint="@string/list_view_default"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:textColor="#aeb9bc"
                        tools:ignore="Deprecated"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_sound"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/checkbox_sound"
                android:textColor="@color/primaryTextColor"
                android:checked="true"
                android:textSize="16sp"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_vibration"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/checkbox_vibration"
                android:textColor="@color/primaryTextColor"
                android:checked="false"
                android:textSize="16sp"/>
        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_accept"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_accept"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:letterSpacing="0"/>
</RelativeLayout>